# LangChain_Tutorial

./: .gitignore  pyproject.toml
CH1/: basics.ipynb  messages.ipynb  structured_output.ipynb
CH2/: chains.ipynb  chains_with_custom_functions.ipynb  conditional_chains.ipynb  parallel_chains.ipynb
CH3/: ReAct.ipynb  ReAct_DB_Agent.ipynb  demo.py  init_db.py
CH3/SalesDB/: sales.db
CH4/: 01_agent_fundamentals.ipynb  02_custom_tools.ipynb  03_agent_memory.ipynb  04_agent_types.ipynb  05_multi_agent.ipynb
